logs/hudjango.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/huDjango-0.95.egg-info'...
Listing './lib/python3.5/site-packages/hudjango'...
Listing './lib/python3.5/site-packages/hudjango/auth'...
Compiling './lib/python3.5/site-packages/hudjango/auth/decorators.py'...
***   File "./lib/python3.5/site-packages/hudjango/auth/decorators.py", line 104
    print "WWW", func, test_func
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hudjango/fields'...
Compiling './lib/python3.5/site-packages/hudjango/fields/__init__.py'...
***   File "./lib/python3.5/site-packages/hudjango/fields/__init__.py", line 22
    raise validators.ValidationError, "Please enter valid %(self)s IDs." % {'self': self.verbose_name}
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hudjango/fields/couchdbfield.py'...
***   File "./lib/python3.5/site-packages/hudjango/fields/couchdbfield.py", line 103
    print "ui!"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hudjango/forms'...
Listing './lib/python3.5/site-packages/hudjango/management'...
Listing './lib/python3.5/site-packages/hudjango/management/commands'...
Compiling './lib/python3.5/site-packages/hudjango/management/commands/couchdb-designs.py'...
***   File "./lib/python3.5/site-packages/hudjango/management/commands/couchdb-designs.py", line 24
    print "The database you're trying to access doesn't exist!"
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hudjango/management/commands/couchdb-drop.py'...
***   File "./lib/python3.5/site-packages/hudjango/management/commands/couchdb-drop.py", line 21
    print "database '%s' deleted succesfully" % database
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hudjango/management/commands/couchdb-init.py'...
***   File "./lib/python3.5/site-packages/hudjango/management/commands/couchdb-init.py", line 32
    except couchdb.client.PreconditionFailed, exception:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hudjango/management/commands/couchdb-validate-documents.py'...
***   File "./lib/python3.5/site-packages/hudjango/management/commands/couchdb-validate-documents.py", line 24
    print "%s: %s" % (filepath,str(ex))
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hudjango/middleware'...
Listing './lib/python3.5/site-packages/hudjango/storage'...
Listing './lib/python3.5/site-packages/hudjango/templateloaders'...
Compiling './lib/python3.5/site-packages/hudjango/templateloaders/couchdbloader.py'...
***   File "./lib/python3.5/site-packages/hudjango/templateloaders/couchdbloader.py", line 36
    raise TemplateDoesNotExist, error_msg
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hudjango/templatetags'...
Compiling './lib/python3.5/site-packages/hudjango/templatetags/hudjango.py'...
***   File "./lib/python3.5/site-packages/hudjango/templatetags/hudjango.py", line 376
    raise template.TemplateSyntaxError, "%r tag requires a single argument" % token.contents[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/regressiontests'...
Listing './lib/python3.5/site-packages/tests/regressiontests/auth_backends'...
Listing './lib/python3.5/site-packages/tests/regressiontests/auth_decorators'...
Listing './lib/python3.5/site-packages/tests/regressiontests/logger'...
Listing './lib/python3.5/site-packages/tests/regressiontests/serializers'...
Compiling './lib/python3.5/site-packages/tests/runtests.py'...
***   File "./lib/python3.5/site-packages/tests/runtests.py", line 83
    print "Importing model %s" % model_name
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
